# solana-anchor-sveltekit-multiple-programs

./: Anchor.toml  Session.vim  package-lock.json  package.json
app/: Session.vim  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
app/src/: app.html
app/src/idl/: nfts_mint_sell.ts  non_custodial_escrow.ts  onchain_voting.ts  onchain_voting_multiple_polls.ts  pdas_instruction_data.ts  program_1.ts  program_2.ts  program_3.ts  solana_anchor_sveltekit_multiple_programs.ts
app/src/lib/: AppBar.svelte  Button.svelte  ContentContainer.svelte  Escrow.svelte  Poll.svelte  SendTransaction.svelte  SignMessage.svelte
programs/nfts-mint-sell/: Cargo.toml
programs/non-custodial-escrow/: Cargo.toml
programs/onchain-voting-multiple-polls/: Cargo.toml
programs/onchain-voting-multiple-polls/src/: lib.rs
programs/onchain-voting-multiple-polls/src/instructions/: create_custom_program.rs  create_poll.rs  create_profile.rs  create_vote.rs  mod.rs
programs/onchain-voting-multiple-polls/src/state/: custom_program.rs  mod.rs  poll.rs  profile.rs  vote.rs
programs/pdas-instruction-data/: Cargo.toml
programs/program-1/: Cargo.toml
programs/program-2/: Cargo.toml
programs/program-3/: Cargo.toml
programs/solana-anchor-sveltekit-multiple-programs/: Cargo.toml
programs/solana-anchor-sveltekit-multiple-programs/src/: lib.rs
scripts/: cicd.sh
tests/: nfts-mint-sell.ts  non-custodial-escrow.ts  onchain-voting-multiple-polls.ts  onchain-voting.ts  onchain_voting.ts  pdas-instruction-data.ts  solana-anchor-sveltekit-multiple-programs.ts  utils.ts
(+52 files in other folders)
